# SatDump

./: .clang-format  .clang-format-ignore  .clangd  .directory  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  SatDump.yml  WhatProductsNeedToDo.md  build_satdump.bat  compile_commands.json  compile_flags.txt  config.json  ctt_paper.tex  docker-compose.yml  gobdump_cfg.json  mypatch.patch  packages.builder  packages.runner  pipelines.json  pipelines_new.json  satdump.appdata.xml  satdump.desktop  satdump_cfg.json  valgrind_out.txt
android/: .gitignore  .project  CMakeLists.txt  android_dialogs.cpp  android_dialogs.h  backend.cpp  backend.h  build.gradle  gradle.properties  imgui_image.cpp  loading_screen.cpp  loading_screen.h  main.cpp  satdump.desktop  settings.gradle
android/SatDump/: .project  build.gradle  proguard-rules.pro
android/android/: .gitignore
android/app/: build.gradle
android/backends/: imgui_impl_opengl3.h
android/imgui_backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp
libsdr/: CMakeLists.txt
libsdr/sdr/: airspy.cpp  airspy.h  airspyhf.cpp  airspyhf.h  file.cpp  file.h  hackrf.cpp  hackrf.h  limesdr.cpp  limesdr.h  pluto.cpp  pluto.h  plutosdr.cpp  plutosdr.h  rtlsdr.cpp  rtlsdr.h  rtltcp.cpp  rtltcp.h  sdr.cpp  sdr.h  sdrplay.cpp  sdrplay.h  spyserver.cpp  spyserver.h
plugins/: CMakeLists.txt  README.md
plugins/aim_support/: CMakeLists.txt  main.cpp
plugins/analog_support/: CMakeLists.txt  main.cpp
plugins/apid_sender/: CMakeLists.txt  main.cpp
plugins/aws_support/: CMakeLists.txt  main.cpp
plugins/bitview_app/: CMakeLists.txt  bit_container.cpp  bit_container.h  bit_container_render.cpp  bitview.cpp  bitview.h  main.cpp  mmap_windows.h  tool.h
plugins/bluewalker3_support/: CMakeLists.txt  main.cpp  module_bw3_decoder.cpp  module_bw3_decoder.h
plugins/bochum_support/: CMakeLists.txt  main.cpp
plugins/c_plugin_support/: .clang-format  CMakeLists.txt
plugins/cluster_support/: CMakeLists.txt  main.cpp
plugins/cubesat_support/: CMakeLists.txt  main.cpp
plugins/dmsp_support/: CMakeLists.txt  main.cpp
plugins/dscovr_support/: CMakeLists.txt  main.cpp
plugins/dvb_support/: CMakeLists.txt  main.cpp
plugins/earthcare_support/: CMakeLists.txt  main.cpp
plugins/elektro_arktika_support/: CMakeLists.txt  main.cpp  msugs_color_ir_merge.h  msugs_natural_color.h
plugins/eos_support/: CMakeLists.txt  main.cpp
plugins/experimental_devices_support/: CMakeLists.txt  main.cpp
plugins/fengyun2_support/: CMakeLists.txt  main.cpp
plugins/fengyun3_support/: CMakeLists.txt  main.cpp
plugins/fengyun4_support/: CMakeLists.txt  main.cpp
plugins/firstparty_support/: CMakeLists.txt  main.cpp  main_loader.cpp  main_loader_handle.cpp  procfile.cpp  procfile.h  product_info.cpp  product_info.h  type.h
plugins/gcom_support/: CMakeLists.txt  main.cpp
plugins/geonetcast_support/: CMakeLists.txt  main.cpp
plugins/gk2a_support/: CMakeLists.txt  main.cpp
plugins/goes_support/: CMakeLists.txt  geo_false_color.h  geo_false_color_ir_merge.h  main.cpp
plugins/gvar_extended/: CMakeLists.txt  main.cpp
plugins/himawari_support/: CMakeLists.txt  main.cpp
plugins/hinode_support/: CMakeLists.txt  main.cpp
plugins/inmarsat_support/: CMakeLists.txt  main.cpp
plugins/insat_support/: CMakeLists.txt  main.cpp
plugins/jason3_support/: CMakeLists.txt  main.cpp
plugins/jpss_support/: CMakeLists.txt  main.cpp
plugins/kanopus_support/: CMakeLists.txt  main.cpp
plugins/landsat_support/: CMakeLists.txt  main.cpp
plugins/mats_support/: CMakeLists.txt  jpeg12_utils.cpp  jpeg12_utils.h  main.cpp
plugins/meteor_support/: CMakeLists.txt  main.cpp
plugins/meteosat_support/: CMakeLists.txt  main.cpp
plugins/metopsg_support/: CMakeLists.txt  main.cpp
plugins/sample/: main.cpp  (+1 more)
src-cli/: CMakeLists.txt  autotrack.cpp  autotrack.h  help_general.cpp  help_general.h  legacy.cpp  legacy.h  live.cpp  maidenhead.c  maidenhead.h  main.cpp  offline.cpp  old.cpp  old.h  project.cpp  project.h  record.cpp  sdr_probe.cpp  sdr_probe.h  webserver.cpp  webserver.h
src-cli2/: CMakeLists.txt  main.cpp  module.cpp  module.h  pipeline.cpp  pipeline.h  probe.cpp  probe.h  process.cpp  process.h  run_as.cpp  run_as.h  run_lua.cpp  run_lua.h  subcommand.h
src-core/: CMakeLists.txt  dll_export.h  init.cpp  init.h  live_pipeline.cpp  live_pipeline.h  logger.cpp  logger.h  module.cpp  module.h  pipe.h  pipeline.cpp  pipeline.h  plugin.cpp  plugin.h  resources.cpp  resources.h  satdump_vars.cpp  satdump_vars.h  satdump_varst.cxx  settings.cpp  settings.h  tle.cpp  tle.h
src-ingestor/: CMakeLists.txt  main.cpp
src-interface/: CMakeLists.txt  app.cpp  app.h  credits.cpp  credits.h  error.cpp  error.h  global.cpp  global.h  live.cpp  live.h  live_run.cpp  main_ui.cpp  main_ui.h  notify_logger_sink.cpp  notify_logger_sink.h  offline.cpp  offline.h  pipeline_selector.h  processing.cpp  processing.h  settings.cpp  settings.h  settingsui.cpp  settingsui.h  status_logger_sink.cpp  status_logger_sink.h  style.cpp  viewer.cpp  viewer.h
src-testing/: CMakeLists.txt  ccsds_muxer.cpp  ccsds_muxer.h  cutils.cpp  cutils.h  elektro.cpp  elektro.h  kernel.cl  main copy.cpp  main.cpp  main2.cpp  main_SDR.cpp  main_as.cpp  main_azimuthalequirect.cpp  main_earth.cpp  main_erminaz.cpp  main_fastdsp.cpp  main_gengoesn_lut.cpp  main_gfsk.cpp  main_jpssbin.cpp  main_kmss.cpp  main_mdl.cpp  main_modis_hdf.cpp  main_msu.cpp  main_msugs_proj.cpp  main_novas.cpp  main_pd120.cpp  main_robot36.cpp  main_sar.cpp  main_sg.cpp  main_snd.cpp  main_sstv.cpp  main_suvi.cpp  main_vulkan.cpp  modulators.cpp  modulators.h  mwr.h  normal_line_xy_proj.h  test.lua
src-ui/: CMakeLists.txt  backend.cpp  backend.h  credits.cpp  fft.cpp  fft.h  file_selection.cpp  gl.h  global.cpp  global.h  live.cpp  live.h  live_run.cpp  live_run.h  loading_screen.cpp  loading_screen.h  main.cpp  offline.cpp  process.cpp  process.h  processing.h  render.cpp  render.h  settingsui.cpp  settingsui.h  style.cpp  style.h
tools/: CMakeLists.txt
(+6007 files in other folders)
